Added to heroku. Now going to work on media queries

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Acme|Kavivanar" rel="stylesheet">
 	<!-- Favicon link -->
 	<link rel="icon" href="assets/images/jobtracker2.png" type="image/png" sizes="16x16">
-	<!-- FONT AWESOME -->
+	<!-- FONT AWESOME and GOOGLE FONTS-->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Acme|Kavivanar|Kalam" rel="stylesheet">
 	<!-- Link for shine.js script -->
 	<script src="js/shine.min.js"></script>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -30,14 +31,14 @@
 				<h1>
 					<span id="landingPageHeader" class="shine large light shine-text-color">JOB TRACKER</span>
 					<span id="logoshado">
-						<img id="headerlogo" src="./assets/images/jobtracker2.png">
+						<img id="headerlogo" class="logoClass" src="./assets/images/jobtracker2.png">
 				</h1></span>
 				<!-- SUBTITLE / SLOGAN -->
 				<h4 id="slogan">Never fear, your career is all right here.</h4>
 				<!-- LOGIN BUTTONS -->
 				<div id="loginButtons">
 					<button type="button" id="logintoacct" class="login btn col-sm-5 btn-success" data-toggle="modal" data-target="#signupModal">Sign Up  <i class="fa fa-user-plus"></i></button>
-					<button type="button" class="login btn col-sm-5 btn-success" data-toggle="modal" data-target="#signinModal">Sign In  <i class="fa fa-sign-in"></i></button>
+					<button type="button" class="login btn col-sm-5 btn-success" data-toggle="modal" data-target="#signinModal">Sign In  <i class="fas fa-sign-in-alt"></i></button>
 				</div>
 			</div>
 		</div>
