--- a/public/menu.html
+++ b/public/menu.html
@@ -37,7 +37,7 @@
 					</span>
 				</div>
 				<!-- HEADER -->
-				<h1>
+				<h1 id="h1forlandingpage">
 					<span id="landingPageHeader" class="shine large light shine-text-color">
 						JOB TRACKER
 					</span>
@@ -48,9 +48,10 @@
 				<div id="buttons">
 					<!-- ACTION BUTTONS -->
 					<button id="invButton" type="button" class="btn btn-success btn-lg btn-block">View ACTIVE Applications <i class="fa fa-thumbs-up"></i></button>
-					<button id="addButton" type="button" class="btn btn-success btn-lg btn-block">Add New Job <i class="fas fa-clipboard-check"></i></button>
+					<button id="addButton" type="button" class="btn btn-warning btn-lg btn-block">Add New Job <i class="fas fa-clipboard-check"></i></button>
 					<br>
-					<button id="inactButton" type="button" class="btn btn-secondary btn-lg btn-block">View Inactive Applications <i class="fas fa-skull"></i></button>
+					<button id="inactButton" type="button" class="btn btn-danger btn-lg btn-block">View Inactive Applications <i class="fas fa-skull"></i></button>
+					<button id="searchButton" type="button" class="btn btn-primary btn-lg btn-block">Search for Jobs <i class="fas fa-search"></i></button>
 				</div>
 			</div>
 		</div>
