Changed front and menu page styling and set-up, now to work on media queries :monkey:

--- a/public/index.html
+++ b/public/index.html
@@ -25,24 +25,37 @@
 	<img class="bgimage" src="./assets/images/green.jpeg">
 
 	<div class="container">
-		<div class="centerContentParent">
-			<div class="centerContentChild">
-				<!-- HEADER -->
-				<h1>
-					<span id="landingPageHeader" class="shine large light shine-text-color">JOB TRACKER</span>
-					<span id="logoshado">
-						<img id="headerlogo" class="logoClass" src="./assets/images/jobtracker2.png">
-				</h1></span>
-				<!-- SUBTITLE / SLOGAN -->
-				<h4 id="slogan">Never fear, your career is all right here.</h4>
-				<!-- LOGIN BUTTONS -->
+		<div class="row justify-content-md-center text-center">
+			<div class="col col-lg-12" id="topSection">
+				<span id="landingPageHeader" class="shine large light shine-text-color">
+					JOB TRACKER
+				</span>
+				<span id="logoshado">
+					<img id="headerlogo" class="logoClass" src="./assets/images/jobtracker2.png">
+				</span>
+			</div>
+		</div>
+		<div class="row justify-content-md-center text-center">
+			<div class="col col-lg-12">
+				<h4 id="slogan">Never fear, your career is all right here.</h4>	
+			</div>
+		</div>
+		<div class="row justify-content-md-center text-center">
+			<div class="col col-lg-12">
 				<div id="loginButtons">
 					<button type="button" id="logintoacct" class="login btn col-sm-5 btn-success" data-toggle="modal" data-target="#signupModal">Sign Up  <i class="fa fa-user-plus"></i></button>
-					<button type="button" class="login btn col-sm-5 btn-success" data-toggle="modal" data-target="#signinModal">Sign In  <i class="fas fa-sign-in-alt"></i></button>
+					<button type="button" class="login btn col-sm-5 btn-success" data-toggle="modal" data-target="#signinModal">Sign In  <i class="fas fa-unlock-alt"></i></button>
 				</div>
 			</div>
 		</div>
-	</div> <!-- close container -->
+	</div>
+
+
+
+
+
+
+
 	
 <!-- =============MODALS====================== -->
 
