Added queries for mobile viewing :dolphin:

--- a/public/jobs.html
+++ b/public/jobs.html
@@ -55,7 +55,7 @@
 		<!-- BACKGROUND IMAGE -->
 		<img class="bgimage" src="./assets/images/green.jpeg">
 
-		<div class="container">
+		<div class="container" id="containerTable">
 			<!-- DATABLE -->
 			<div id="table-container">
 				<h1 class="headerJobs"><span class="showNameJobs"></span> <u><span id="whichView"></span></u> Job Applications</h1>
