--- a/public/menu.html
+++ b/public/menu.html
@@ -31,7 +31,7 @@
 				<span id="logoshado">
 					<img id="headerlogo2" class="logoClass" src="./assets/images/jobtracker2.png">
 				</span>
-				<span id="landingPageHeader" class="shine large light shine-text-color">
+				<span id="landingPageHeader2" class="shine large light shine-text-color menuHeader">
 					JOB TRACKER
 				</span>
 			</div>
