--- a/public/search.html
+++ b/public/search.html
@@ -28,11 +28,11 @@
 		<!-- FIXED NAVBAR -->
 		<nav class="fixed-nav-bar">
 		  	<!-- Logo / link to main menu -->
-		  	<a href="/menu">Job Tracker<img id="navbarlogo" src="./assets/images/jobtracker2.png"></a>
+		  	<a id="menuWord" href="/menu">JOB TRACKER<img id="navbarlogo" src="./assets/images/jobtracker2.png"></a>
 			<!-- dropdown menu -->
 			<div class="dropdown" id="menudropdown">
 			  	<button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown">
-			  		Menu<span class="caret"></span>
+			  		Menu <i class="fas fa-lg fa-chevron-circle-down"></i>
 			  	</button>
 				<ul class="dropdown-menu">
 					<li><a href="/add">Add New Job</a></li>
