--- a/public/jobs.html
+++ b/public/jobs.html
@@ -21,10 +21,15 @@
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>	 
-	 <!--DataTables for Bootstrap-->
-  	<script src="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css"></script>
-  	<script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>    
-	<script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
+	<!--DataTables for Bootstrap-->
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.16/b-1.5.1/b-colvis-1.5.1/b-flash-1.5.1/b-html5-1.5.1/b-print-1.5.1/cr-1.4.1/r-2.2.1/datatables.min.css"/>
+ 
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/pdfmake.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/vfs_fonts.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.16/b-1.5.1/b-colvis-1.5.1/b-flash-1.5.1/b-html5-1.5.1/b-print-1.5.1/cr-1.4.1/r-2.2.1/datatables.min.js"></script>
+
+
+
 	<!-- Link to Moment.js should go here -->
 	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 		<!-- CUSTOM JAVASCRIPT -->
@@ -63,14 +68,14 @@
 					<thead>
 					<tr>
 						<th></th>
-						<th>Date<br>Applied <span class="fa fa-sort" aria-hidden="true"></span></th>
-						<th>Position <span class="fa fa-sort" aria-hidden="true"></span></th>
-						<th>Company <span class="fa fa-sort" aria-hidden="true"></span></th>
-						<th>Location <span class="fa fa-sort" aria-hidden="true"></span></th>
-						<th>Description <span class="fa fa-sort" aria-hidden="true"></span></th>
-						<th>ID # <span class="fa fa-sort" aria-hidden="true"></span></th>
-						<th>Posted<br>From <span class="fa fa-sort" aria-hidden="true"></span></th>
-						<th>Interest<br>Level <span class="fa fa-sort" aria-hidden="true"></span></th>
+						<th>Date<br>Applied </span></th>
+						<th>Position </span></th>
+						<th>Company </span></th>
+						<th>Location </span></th>
+						<th>Description </span></th>
+						<th>ID # </span></th>
+						<th>Posted<br>From </span></th>
+						<th>Interest<br>Level </span></th>
 						<th>Employer's<br>Response </th>
 						<th>Update</th>
 						<!-- <th>Delete</th> -->
