--- a/public/edit.html
+++ b/public/edit.html
@@ -36,7 +36,7 @@
 			  		Menu <i class="fas ffa-lg a-chevron-circle-down"></i>
 			  	</button>
 				<ul class="dropdown-menu">
-					<li><a href="/add">Add New Job</a></li>
+					<li><a href="/add">Add a NEW Job Application</a></li>
 					<li><a onclick="viewActive()">View ACTIVE Applications</a></li>
 					<li><a onclick="viewInactive()">View INACTIVE Applications</a></li>
 					<li><a href="/search">Search Jobs (coming soon!)</a></li>
@@ -213,6 +213,7 @@
 							<div class="form-group">
 								<div class="col-sm-offset-3 col-sm-9">
 									<button type="submit" class="btn btn-success" id="editedJob">Save Changes</button>
+									<a href="/jobs.html" id="discardChanges" class="btn btn-danger" role="button" aria-pressed="true">Discard</a>
 								</div>
 							</div>
 
