--- a/public/search.html
+++ b/public/search.html
@@ -35,7 +35,7 @@
 			  		Menu <i class="fas fa-lg fa-chevron-circle-down"></i>
 			  	</button>
 				<ul class="dropdown-menu">
-					<li><a href="/add">Add New Job</a></li>
+					<li><a href="/add">Add a NEW Job Application</a></li>
 					<li><a onclick="viewActive()">View ACTIVE Applications</a></li>
                     <li><a onclick="viewInactive()">View INACTIVE Applications</a></li>
                     <li><a href="/search">Search Jobs (coming soon!)</a></li>
