changed how time was shown :giraffe:

--- a/public/jobs.html
+++ b/public/jobs.html
@@ -65,15 +65,14 @@
 					<thead>
 					<tr>
 						<th></th>
-						<th>Date<br>Applied </span></th>
-						<th>Position </span></th>
-						<th>Company </span></th>
-						<th>Location </span></th>
-						<th>Description </span></th>
-						<th>ID # </span></th>
-						<th>Posted<br>From </span></th>
-						<th>Interest<br>Level </span></th>
-						<th>Employer's<br>Response </th>
+						<th>Date<br>Applied</th>
+						<th>Position</th>
+						<th>Company</th>
+						<th>Location</th>
+						<th>ID #</th>
+						<th>Posted<br>From</th>
+						<th>Interest<br>Level</th>
+						<th>Employer's<br>Response</th>
 						<th>Update</th>
 						<!-- <th>Delete</th> -->
 					</tr>
