working on mobile responsiveness :pig:

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 		<div class="row justify-content-md-center text-center">
 			<div class="col col-lg-12">
 				<div id="loginButtons">
-					<button type="button" id="logintoacct" class="login btn col-sm-5 btn-success" data-toggle="modal" data-target="#signupModal">Sign Up  <i class="fa fa-user-plus"></i></button>
+					<button type="button" id="logintoacct" class="login btn col-sm-5 btn-warning" data-toggle="modal" data-target="#signupModal">Sign Up  <i class="fa fa-user-plus"></i></button>
 					<button type="button" class="login btn col-sm-5 btn-success" data-toggle="modal" data-target="#signinModal">Sign In  <i class="fas fa-unlock-alt"></i></button>
 				</div>
 			</div>
