--- a/public/menu.html
+++ b/public/menu.html
@@ -54,6 +54,11 @@
 					<button id="searchButton" type="button" class="btn btn-primary btn-lg btn-block menuButton">Search for Jobs <i class="fas fa-search"></i></button>
 				</div>
 			</div>
+			<div class="col col-lg-12">
+				<div id="menuButtons3">
+					<button id="logoutButton" type="button" class="btn btn-dark btn-lg btn-block menuButton">Log Out <i class="fas fa-external-link-alt"></i></button>
+				</div>
+			</div>
 		</div>
 	</div>
 
