Simplified code for changing data to red if it is older than a preset number of days :pig:

--- a/public/jobs.html
+++ b/public/jobs.html
@@ -72,8 +72,8 @@
 						<th>ID #</th>
 						<th>Posted<br>From</th>
 						<th>Interest<br>Level</th>
-						<th>Employer's<br>Response</th>
-						<th>Update</th>
+						<th data-orderable="false">Employer's<br>Response</th>
+						<th data-orderable="false">Update</th>
 						<!-- <th>Delete</th> -->
 					</tr>
 					</thead>
