--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
 		    </div>
     
 		    <div class="modal-footer">
-		        <button type="button" id="closeButton" class="btn btn-secondary" data-dismiss="modal">Close</button>
+		        <button type="button" class="btn btn-secondary closeButton" data-dismiss="modal">Close</button>
 		        <button type="submit" id="signinbutton" class="btn btn-success">Submit</button>
 		    	</form>
 		    </div>
@@ -136,7 +136,7 @@
       	</div>
 
     	<div class="modal-footer">
-    		<button type="button" id="closeButton" class="btn btn-secondary" data-dismiss="modal">Close</button>
+    		<button type="button" class="btn btn-secondary closeButton" data-dismiss="modal">Close</button>
         	<button type="submit" id="signupbutton" value="Sign Up" class="btn btn-success">Submit</button>
         	</form>
       	</div>
