--- a/public/menu.html
+++ b/public/menu.html
@@ -38,29 +38,26 @@
 		</div>
 		<div class="row justify-content-md-center text-center">
 			<div class="col col-lg-12">
-				<h4 id="slogan">Never fear, your career is all right here.</h4>	
+				<h4 id="slogan">Never fear, your career is <u>all right</u> here.</h4>	
 			</div>
 		</div>
-		<div class="row justify-content-md-center text-center">
-			<div class="col col-lg-12">
-				<div id="menuButtons">
-					<button id="invButton" type="button" class="btn btn-success btn-lg btn-block menuButton">View ACTIVE Applications <i class="fa fa-thumbs-up"></i></button>
-					<button id="addButton" type="button" class="btn btn-warning btn-lg btn-block menuButton">Add New Job <i class="fas fa-clipboard-check"></i></button>
-				</div>
-			</div>
-			<div class="col col-lg-12">
-				<div id="menuButtons2">
-					<button id="inactButton" type="button" class="btn btn-danger btn-lg btn-block menuButton">View Inactive Applications <i class="fas fa-skull"></i></button>
-					<button id="searchButton" type="button" class="btn btn-primary btn-lg btn-block menuButton">Search for Jobs <i class="fas fa-search"></i></button>
-				</div>
-			</div>
-			<div class="col col-lg-12">
-				<div id="menuButtons3">
-					<button id="logoutButton" type="button" class="btn btn-dark btn-lg btn-block menuButton">Log Out <i class="fas fa-external-link-alt"></i></button>
-				</div>
+
+		<!-- Button section -->
+		<div class="container-fluid">
+			<div class="col-sm-12 text-center menuButtonSection">
+				<button id="jobButton" type="button" class="btn btn-success btn-lg btn-block center-block">View Applications <i class="fa fa-thumbs-up"></i></button>
 			</div>
 		</div>
-	</div>
+		<div class="container-fluid">
+			<div class="col-sm-12 text-center menuButtonSection">
+				<button id="addButton" type="button" class="btn btn-warning btn-lg btn-block center-block">Add New Job <i class="fas fa-clipboard-check"></i></button>
+			</div>
+		</div>
+		<div class="container-fluid">
+			<div class="col-sm-12 text-center menuButtonSection">
+				<button id="logoutButton" type="button" class="btn btn-dark btn-lg btn-block center-block">Log Out <i class="fas fa-external-link-alt"></i></button>
+			</div>
+		</div>
 
 <!-- CUSTOM JAVASCRIPT -->
 <script src="./js/menu.js"></script>
