--- a/public/jobs.html
+++ b/public/jobs.html
@@ -46,8 +46,7 @@
 			  	</button>
 				<ul class="dropdown-menu">
 				    <li><a class="dropdownOptions" href="/add">Add a NEW Job Application</a></li>
-					<li><a class="dropdownOptions" onclick="viewActive()">View ACTIVE Applications</a></li>
-					<li><a class="dropdownOptions" onclick="viewInactive()">View INACTIVE Applications</a></li>
+					<li><a class="dropdownOptions" href="/jobs">View Applications</a></li>
 					<li><a class="dropdownOptions" href="/search">Search Jobs (coming soon!)</a></li>
 				    <li><a class="dropdownOptions" href="/logout">Logout</a></li>
 			  	</ul>
@@ -60,7 +59,8 @@
 		<div class="container" id="containerTable">
 			<!-- DATABLE -->
 			<div id="table-container">
-				<h1 class="headerJobs"><span class="showNameJobs"></span> <u><span id="whichView"></span></u> Job Applications</h1>
+				<h1 class="headerJobs"><span class="showNameJobs"></span> Job Applications</h1>
+				<span id="applicationTotals"></span>
 				<table id="jobs" class="table table-hover table-responsive" cellspacing="0" width="100%">
 					<thead>
 					<tr>
@@ -72,6 +72,7 @@
 						<th>ID #</th>
 						<th>Posted<br>From</th>
 						<th>Interest<br>Level</th>
+						<th>Status </th>
 						<th data-orderable="false">Employer's<br>Response</th>
 						<th data-orderable="false">Update</th>
 						<!-- <th>Delete</th> -->
@@ -99,9 +100,9 @@
 					<div class="modal-body">
 						<!-- Date response from comapny was -->
 						<div class="form-group">
-							<label for="input_date_applied" class="col-sm-7 control-label responseDate">Response Date (leave blank for today's date)</label>
-							<div class="col-sm-5">
-								<input type="date" class="form-control responseDate" id="responseDate" name="responseDate" required>
+							<label for="input_date_applied" class="col-sm-3 col-offset-sm-3 control-label responseDate">Response Date</label>
+							<div class="col-sm-4">
+								<input type="date" class="form-control responseDate" id="dateResponded" name="responseDate" required>
 							</div>
 						</div>
 
