--- a/public/reset.html
+++ b/public/reset.html
@@ -36,11 +36,10 @@
 			  		Menu <i class="fas ffa-lg a-chevron-circle-down"></i>
 			  	</button>
 				<ul class="dropdown-menu">
-					<li><a href="/add">Add a NEW Job Application</a></li>
-					<li><a onclick="viewActive()">View ACTIVE Applications</a></li>
-					<li><a onclick="viewInactive()">View INACTIVE Applications</a></li>
-					<li><a href="/search">Search Jobs (coming soon!)</a></li>
-					<li><a href="/logout">Logout</a></li>
+					<li><a class="dropdownOptions" href="/add">Add a NEW Job Application</a></li>
+					<li><a class="dropdownOptions" href="/jobs">View Applications</a></li>
+					<li><a class="dropdownOptions" href="/search">Search Jobs (coming soon!)</a></li>
+					<li><a class="dropdownOptions" href="/logout">Logout</a></li>
 			  	</ul>
 			</div>
 		</nav>
