--- a/public/jobs.html
+++ b/public/jobs.html
@@ -2,16 +2,12 @@
 <html>
 <head>
 	<title>Job Tracker | Jobs</title>
-
 	<meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-	<!-- CUSTOM STYLESHEET -->
-	<link rel="stylesheet" href="./assets/css/style.css">
 	<!-- Favicon link -->
 	<link rel="icon" href="assets/images/jobtracker2.png" type="image/png" sizes="16x16">
 	<!-- FONT AWESOME and GOOGLE FONTS -->
@@ -28,111 +24,124 @@
 	<script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.16/b-1.5.1/b-colvis-1.5.1/b-flash-1.5.1/b-html5-1.5.1/b-print-1.5.1/cr-1.4.1/r-2.2.1/datatables.min.js"></script>
 	<!-- Link to Moment.js should go here -->
 	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-	<!-- CUSTOM JAVASCRIPT -->
-	<script src="js/jobs.js"></script>
+	<!-- CUSTOM STYLESHEET -->
+	<link rel="stylesheet" href="./assets/css/jobs.css">
 	
 
 </head>
 <body>
-	<div class="genContainer">
-		<!-- FIXED NAVBAR -->
-		<nav class="fixed-nav-bar">
-		  	<!-- Logo / link to main menu -->
-		  	<a id="menuWord" href="/menu">JOB TRACKER<img id="navbarlogo" src="./assets/images/jobtracker2.png"></a>
-			<!-- dropdown menu -->
-			<div class="dropdown" id="menudropdown">
-			  	<button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown">
-			  		Menu <i class="fas fa-lg fa-chevron-circle-down"></i>
-			  	</button>
-				<ul class="dropdown-menu">
-				    <li><a class="dropdownOptions" href="/add">Add a NEW Job Application</a></li>
-					<li><a class="dropdownOptions" href="/jobs">View Applications</a></li>
-					<li><a class="dropdownOptions" href="/search">Search Jobs (coming soon!)</a></li>
-				    <li><a class="dropdownOptions" href="/logout">Logout</a></li>
-			  	</ul>
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid" id="navbarSection">
+			<div class="navbar-header">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="/menu.html"><span id="navbarTitle">JOB TRACKER</span></a>
+					<img id="navbarlogo" src="./assets/images/jobtracker2.png">
+				</div>
 			</div>
-		</nav>
-
-		<!-- BACKGROUND IMAGE -->
-		<img class="bgimage" src="./assets/images/green.jpeg">
-
-		<div class="container" id="containerTable">
-			<!-- DATABLE -->
-			<div id="table-container">
-				<h1 class="headerJobs"><span class="showNameJobs"></span> Job Applications</h1>
-				<span id="applicationTotals"></span>
-				<table id="jobs" class="table table-hover table-responsive" cellspacing="0" width="100%">
-					<thead>
-					<tr>
-						<th></th>
-						<th>Date<br>Applied</th>
-						<th>Position</th>
-						<th>Company</th>
-						<th>Location</th>
-						<th>ID #</th>
-						<th>Posted<br>From</th>
-						<th>Interest<br>Level</th>
-						<th>Status </th>
-						<th data-orderable="false">Employer's<br>Response</th>
-						<th data-orderable="false">Update</th>
-						<!-- <th>Delete</th> -->
-					</tr>
-					</thead>
-
-					<tbody>
-						<!--table rows inserted here from jobs.js-->	
-					</tbody>
-				</table>
+		
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav midSection">
+					<div id="title">
+						<span class="showNameJobs"></span> Job Applications
+					</div>
+				</ul>
+			
+				<ul class="nav navbar-nav navbar-right">
+					<li><a class="navbarLinks" href="/add">Add an Application</a></li>
+					<li><a class="navbarLinks" href="/logout">Log Out</a></li>
+				</ul>
 			</div>
 		</div>
+	</nav>
 
-		<!-- Employer response modal-->
-		<!-- Sign in Modal -->
-		<div class="modal fade" id="responseModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-			<div class="modal-dialog" role="document">
+	<!-- BACKGROUND IMAGE -->
+	<img class="bgimage" src="./assets/images/green.jpeg">
+
+	<div class="container" id="containerTable">
+		<!-- DATABLE -->
+		<div id="table-container">
+			
+			<span id="applicationTotals"></span>
+			<table id="jobs" class="table table-hover table-responsive" cellspacing="0" width="100%">
+				<thead>
+				<tr id="headerRow">
+					<th></th>
+					<th>Date<br>Applied</th>
+					<th>Position</th>
+					<th>Company</th>
+					<th id="row_location">Location</th>
+					<th id="row_id">ID #</th>
+					<th id="row_posted_from">Posted <br>From</th>
+					<th id="row_interest_level">Interest<br>Level</th>
+					<th id="row_status">Status </th>
+					<th id="row_emp_resp" data-orderable="false">Employer's<br>Response</th>
+					<th id="row_update" data-orderable="false">Update</th>
+					<!-- <th>Delete</th> -->
+				</tr>
+				</thead>
+
+				<tbody>
+					<!--table rows inserted here from jobs.js-->	
+				</tbody>
+			</table>
+			<div  id="lowerSection"></div>
+		</div>
+	</div>
+
+
+	<!-- Employer response modal-->
+	<!-- Sign in Modal -->
+	<div class="modal fade" id="responseModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+	
+			<div class="modal-content">
+				<div class="modal-header">
+					<h3 class="modal-title" id="response">Response from <span id="companyName"></span></h3>
+					<h4 class="modal-title" id="response">For the position of <span id="positionName"></span></h4>
+				</div>
 		
-				<div class="modal-content">
-					<div class="modal-header">
-						<h3 class="modal-title" id="response">Response from <span id="companyName"></span></h3>
-						<h4 class="modal-title" id="response">For the position of <span id="positionName"></span></h4>
+				<div class="modal-body">
+					<!-- Date response from comapny was -->
+					<div class="form-group">
+						<label for="input_date_applied" class="col-sm-3 col-offset-sm-3 control-label responseDate">Response Date</label>
+						<div class="col-sm-4">
+							<input type="date" class="form-control responseDate" id="dateResponded" name="responseDate" required>
+						</div>
+					</div>
+
+					<br><br>
+					<div class="row">
+						<form class="form-horizontal response" id="responseGood" name="goodnews" method="post" action="/signin">
+							<label for="goodNewsForm">GOOD NEWS</label>		
+						</form>
+						<form class="form-horizontal response" id="responseBad" name="badnews" method="post" action="/signin">
+							<label for="badNewsForm">BAD NEWS</label>	
+						</form>
+					</div>	
+
+					<div class="row">
+						<select class="form-control" id="responseGoodOptions">
+							<option></option>
+							<option>Requested Interview</option>
+							<option>Phone Interview</option>
+							<option>Will Contact Me</option>
+							<option>Positive Comments</option>
+							<option>Made an Offer for Employment</option>
+							<option>Made it Through Next Round</option>
+						</select>
+						<select class="form-control" id="responseBadOptions">
+							<option></option>
+							<option>Not the Right Fit</option>
+							<option>Position was Closed</option>
+							<option>Hiring Freeze</option>
+							<option>They Went in a Different Direction</option>
+							<option>Position Was Filled</option>
+						</select>
 					</div>
 			
-					<div class="modal-body">
-						<!-- Date response from comapny was -->
-						<div class="form-group">
-							<label for="input_date_applied" class="col-sm-3 col-offset-sm-3 control-label responseDate">Response Date</label>
-							<div class="col-sm-4">
-								<input type="date" class="form-control responseDate" id="dateResponded" name="responseDate" required>
-							</div>
-						</div>
-
-						<form class="form-horizontal response" id="responseGood" name="goodnews" method="post" action="/signin">
-							<label for="goodNewsForm">GOOD NEWS</label>
-							<select class="form-control" id="responseGoodOptions">
-								<option></option>
-								<option>Requested Interview</option>
-								<option>Phone Interview</option>
-								<option>Will Contact Me</option>
-								<option>Positive Comments</option>
-								<option>Made an Offer for Employment</option>
-								<option>Made it Through Next Round</option>
-							</select>	
-						</form>
-
-						<form class="form-horizontal response" id="responseBad" name="badnews" method="post" action="/signin">
-							<label for="badNewsForm">BAD NEWS</label>
-							<select class="form-control" id="responseBadOptions">
-								<option></option>
-								<option>Not the Right Fit</option>
-								<option>Position was Closed</option>
-								<option>Hiring Freeze</option>
-								<option>They Went in a Different Direction</option>
-								<option>Position Was Filled</option>
-							</select>	
-						</form>
-					</div>
-					<br><br><br>
-
+					<br>
+			
 					<div class="form-check">
 						<label class="form-check-label active_inactive">
 							<input class="form-check-input" type="radio" name="statusRadio" id="applicationStatus" value="Active">
@@ -146,35 +155,42 @@
 						</label>
 					</div>
 
+					<br>
+
 					<!--Notes input-->
 					<div class="form-group">
-						<label for="input_notes" class="col-sm-2 control-label">Notes</label>
+						<label for="input_notes" id="notesSection" class="col-sm-2 control-label">Notes</label>
 						<div class="col-sm-10">
 							<textarea class="form-control" id="responseNotes" rows="3"></textarea>
 						</div>
 					</div>
+				</div>
 
-					<br><br><br><br>
+				<br><br><br><br>
 
-					<div class="modal-footer">
-						<span id="userError"></span>
-						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-						<button type="submit" id="responseButton" class="btn btn-success">Submit</button>
-					</div>
+				<div class="modal-footer">
+					<span id="userError"></span>
+					<button type="button" class="btn btn-default responseButtons" data-dismiss="modal">Close</button>
+					<button type="submit" id="responseButton" class="btn btn-success responseButtons">Submit</button>
 				</div>
 			</div>
 		</div>
-
-		<!-- STICKY FOOTER -->
-		<footer class="footer">
-			<div class="container">
-				<p>
-					<a href="https://github.com/stuartschafer/Job-Tracker-2.0" target="_blank" >
-					<i class="fab fa-github-square"></i></a>
-				</p>
-			</div>    
-		</footer>
 	</div>
 
+	<!-- STICKY FOOTER -->
+	<nav class="navbar navbar-default navbar-fixed-bottom">
+		<div id="footerNavbar">
+			<div class="container text-center">
+				<a href="https://github.com/stuartschafer/Job-Tracker-2.0" target="_blank" >
+				<i class="fab fa-github-square"></i></a>
+				
+				<ul class="nav navbar-nav navbar-right">
+					<li><a class="navbarLinks" href="/settings">Settings</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 </body>
+<!-- CUSTOM JAVASCRIPT -->
+<script src="js/jobs.js"></script>
 </html>
