Fixed error in adding a new user :tiger2:

--- a/public/add.html
+++ b/public/add.html
@@ -46,7 +46,7 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav midSection">
 					<div id="title">
-						<span class="showNameJobs"></span> Job Applications
+						<span class="showNameJobs"></span> New Application
 					</div>
 				</ul>
 			
