--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
 						<div class="form-group">
 							<label for="password" id="confirmPW" class="col-sm-3 control-label">Confirm Password</label>
 							<div class="col-sm-9">
-								<input type="password" class="form-control newuser" id="newUserPasswordConfirm" name="password" required>
+								<input type="password" class="form-control newuser" id="newUserPasswordConfirm" name="passwordConfirm" required>
 							</div>
 						</div>
 						<div class="form-group">
@@ -177,7 +177,8 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default closeButton" data-dismiss="modal">Close</button>
-						<button type="submit" id="signupbutton" value="Sign Up" class="btn btn-success">Submit</button>
+						<button type="button" id="signupbutton" value="Check Info" class="btn btn-primary">Check Info</button>
+						<button type="submit" id="submitButton" value="Sign Up" class="btn btn-success">Submit</button>
 					</div>
 				</form>	
 			</div>
