Fixed styling for login buttons :horse:

--- a/public/index.html
+++ b/public/index.html
@@ -79,16 +79,12 @@
 							<div class="col-sm-9">
 								<input type="password" name="password" class="form-control existinguser" id="userPassword" required>
 							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-4">
-								<button type="button" id="resetPW" class="btn btn-danger">Forgot/Reset Password</button>
-							</div>
 						</div>			
 					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-default closeButton" data-dismiss="modal">Close</button>
-						<button type="submit" id="signinbutton" class="btn btn-success">Submit</button>
+						<button type="button" id="resetPW" class="btn btn-danger">Forgot/Reset Password</button>
+						<button type="button" class="btn btn-default buttonStuff" data-dismiss="modal">Close</button>
+						<button type="submit" id="signinbutton" class="btn btn-success buttonStuff">Submit</button>
 					</div>
 				</form>	
 			</div>
@@ -176,9 +172,9 @@
 						</div>
 					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-default closeButton" data-dismiss="modal">Close</button>
-						<button type="button" id="signupbutton" value="Check Info" class="btn btn-primary">Check Info</button>
-						<button type="submit" id="submitButton" value="Sign Up" class="btn btn-success">Submit</button>
+						<button type="button" class="btn btn-default buttonStuff" data-dismiss="modal">Close</button>
+						<button type="button" id="signupbutton" value="Check Info" class="btn btn-primary buttonStuff">Check Info</button>
+						<button type="submit" id="submitButton" value="Sign Up" class="btn btn-success buttonStuff">Submit</button>
 					</div>
 				</form>	
 			</div>
