Fixed styling for login buttons :horse:

--- a/public/menu.html
+++ b/public/menu.html
@@ -51,16 +51,16 @@
 		<!-- Button section -->
 		<div class="container">
 			<div class="row justify-content-md-center">
-				<button id="jobButton" type="button" class="btn btn-success btn-lg btn-block center-block">View Applications <i class="fa fa-thumbs-up"></i></button>
+				<button id="jobButton" type="button" class="btn btn-success btn-lg btn-block center-block buttonStuff">View Applications <i class="fa fa-thumbs-up"></i></button>
 			</div>
 			<div class="row justify-content-md-center">
-				<button id="addButton" type="button" class="btn btn-warning btn-lg btn-block center-block">Add New Job <i class="fas fa-clipboard-check"></i></button>
+				<button id="addButton" type="button" class="btn btn-warning btn-lg btn-block center-block buttonStuff">Add New Job <i class="fas fa-clipboard-check"></i></button>
 			</div>
 			<div class="row justify-content-md-center">
-				<button id="settingsButton" type="button" class="btn btn-primary btn-lg btn-block center-block">Settings <i class="fas fa-cogs"></i></button>
+				<button id="settingsButton" type="button" class="btn btn-primary btn-lg btn-block center-block buttonStuff">Settings <i class="fas fa-cogs"></i></button>
 			</div>
 			<div class="row justify-content-md-center">
-				<button id="logoutButton" type="button" class="btn btn-dark btn-lg btn-block center-block">Log Out <i class="fas fa-external-link-alt"></i></button>
+				<button id="logoutButton" type="button" class="btn btn-dark btn-lg btn-block center-block buttonStuff">Log Out <i class="fas fa-external-link-alt"></i></button>
 			</div>
 		</div>
 
