Fixed styling for login buttons :horse:

--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,10 @@
 		<!-- Buttons -->
 		<div class="container">
 			<div class="row justify-content-md-center">
-				<button id="logintoacct" type="button" class="btn btn-warning btn-lg btn-block center-block" data-toggle="modal" data-target="#signupModal">Sign Up  <i class="fa fa-user-plus"></i></button>
+				<button id="logintoacct" type="button" class="btn btn-warning btn-lg btn-block center-block mainButtons" data-toggle="modal" data-target="#signupModal">Sign Up  <i class="fa fa-user-plus"></i></button>
 			</div>
 			<div class="row justify-content-md-center">
-				<button id="signintoacct" type="button" class="btn btn-success btn-lg btn-block center-block" data-toggle="modal" data-target="#signinModal">Sign In  <i class="fas fa-unlock-alt"></i></button>
+				<button id="signintoacct" type="button" class="btn btn-success btn-lg btn-block center-block mainButtons" data-toggle="modal" data-target="#signinModal">Sign In  <i class="fas fa-unlock-alt"></i></button>
 			</div>
 		</div>
 
