Fixed duplicate jopbs going into db - called js file twice - duh :cry:

--- a/public/add.html
+++ b/public/add.html
@@ -193,7 +193,7 @@
 						<!--submit button-->
 						<div class="form-group" id="buttonSection">
 							<div class="col-sm-offset-3 col-sm-9">
-								<button type="submit" class="btn btn-success" id="newJob">Submit</i></button>
+								<button type="button" class="btn btn-success" id="submitNewJob">Submit</i></button>
 								<a href="/jobs.html" id="discardChanges" class="btn btn-danger" role="button" aria-pressed="true">Discard</a>
 							</div>
 						</div>
@@ -217,7 +217,5 @@
 			</div>
 		</div>
 	</nav>
-	<!-- CUSTOM JAVASCRIPT -->
-	<script src="js/add.js"></script>
 </body>
 </html>
